--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         rel="stylesheet" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/json2.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json2/20121008/json2.js"></script>
     <script type="text/javascript" src="js/frame.js"></script>
     <style type="text/css">
         body
