changed lstFrames from <ol> to <div>
This is more in alignment with HTML standards

--- a/index.html
+++ b/index.html
@@ -891,9 +891,9 @@
       </div>
       <div id="dlgFrameList" style="font-size: 50%;">
         <div id="divFrameContainer">
-          <ol id="lstFrames">
+          <div id="lstFrames">
             <!-- should get filled in later by updateFrameList() -->
-          </ol>
+          </div>
         </div>
         <div style="float: left;">
           <input id="btnPrevFrame" type="button" value="<<" class="btnDisableOnPlayback" onclick="javascript:prevFrame();"/><input id="btnPlay" type="button" value="Play" onclick="javascript:playToggle();"/><input id="btnNextFrame" type="button" value=">>" class="btnDisableOnPlayback" onclick="javascript:nextFrame();"/>
