put duration explanation text in <label>

--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
           <input id="btnInsertFrame" type="button" value="Insert" class="btnDisableOnPlayback" onclick="javascript:insertFrame(false);"/><input id="btnCopyFrame" type="button" value="Copy" class="btnDisableOnPlayback" onclick="javascript:insertFrame(true);"/><input id="btnDeleteFrame" type="button" value="Delete" class="btnDisableOnPlayback" onclick="javascript:deleteFrame();"/>
         </div>
         <div style="text-align: center;">
-          Current frame duration (in ms):<input id="txtDuration" type="text" style="width: 50px;"/><input id="btnApplyDuration" type="button" value="Apply" class="btnDisableOnPlayback" onclick="javascript:editDuration();"/>
+          <label for="txtDuration">Current frame duration (in ms):</label><input id="txtDuration" type="text" style="width: 50px;"/><input id="btnApplyDuration" type="button" value="Apply" class="btnDisableOnPlayback" onclick="javascript:editDuration();"/>
         </div>
       </div>
       <div id="dlgNew">
